// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Touchable Tests Text components can be tappable 1`] = `
{
  "Automation Tree": {
    "AutomationId": "tappable_text",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Text has built-in onPress handling",
    "TextRangePattern.GetText": "Text has built-in onPress handling",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "tappable_text",
    },
  },
  "Visual Tree": {
    "Comment": "tappable_text",
    "Offset": "0, 0, 0",
    "Size": "873, 28.99997",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Touchable Tests TouchableWithoutFeedback components should not give visual feedback 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_without_feedback_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Tap Here For No Feedback!",
        "TextRangePattern.GetText": "Tap Here For No Feedback!",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "touchable_without_feedback_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "touchable_without_feedback_button",
    "Offset": "0, 0, 0",
    "Size": "873, 50.000015",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "9, 9, 0",
        "Size": "855, 33",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "855, 33",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Touchable Tests Touchables can be defined in a set using accessibilityPosInSet and accessibilitySetSize 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_set",
    "ControlType": 50026,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "PositionInSet": 1,
        "SizeofSet": 3,
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Touchable Highlight (Control 1 in Set of 3)",
            "TextRangePattern.GetText": "Touchable Highlight (Control 1 in Set of 3)",
          },
        ],
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LiveSetting": "Polite",
        "LocalizedControlType": "group",
        "PositionInSet": 2,
        "SizeofSet": 3,
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Touchable Opacity (Control 2 in Set of 3)",
            "TextRangePattern.GetText": "Touchable Opacity (Control 2 in Set of 3)",
          },
        ],
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "IsKeyboardFocusable": true,
        "LiveSetting": "Assertive",
        "LocalizedControlType": "text",
        "Name": "TouchableWithoutFeedback (Control 3 in Set of 3)",
        "TextRangePattern.GetText": "TouchableWithoutFeedback (Control 3 in Set of 3)",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "touchable_set",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "touchable_set",
    "Offset": "0, 0, 0",
    "Size": "873, 84",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "873, 28.000122",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "873, 28.000122",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "873, 28.000122",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "873, 28.000122",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "0, 28, 0",
        "Size": "873, 27.999756",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "873, 27.999756",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "873, 28.999878",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "873, 28.999878",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "0, 55, 0",
        "Size": "873, 28.999878",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "873, 28.999878",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Touchable Tests Touchables can be disabled 1`] = `
{
  "Automation Tree": {
    "AutomationId": "disabled_touchable",
    "ControlType": 50026,
    "IsEnabled": false,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Disabled TouchableOpacity",
        "TextRangePattern.GetText": "Disabled TouchableOpacity",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "disabled_touchable",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {
          "Opacity": 0.5,
        },
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(0, 0, 0, 0)",
    },
    "Comment": "disabled_touchable",
    "Offset": "0, 0, 0",
    "Size": "873, 58.000008",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "311, 15, 0",
        "Size": "252, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Opacity": 0.5,
            "Size": "252, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Touchable Tests Touchables can be disabled 2`] = `
{
  "Automation Tree": {
    "AutomationId": "disabled_touchable",
    "ControlType": 50026,
    "IsEnabled": false,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Disabled TouchableOpacity",
        "TextRangePattern.GetText": "Disabled TouchableOpacity",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "disabled_touchable",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {
          "Opacity": 0.5,
        },
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(0, 0, 0, 0)",
    },
    "Comment": "disabled_touchable",
    "Offset": "0, 0, 0",
    "Size": "873, 58.000008",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "311, 15, 0",
        "Size": "252, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Opacity": 0.5,
            "Size": "252, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Touchable Tests Touchables can contain a Text component 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_highlight_text_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Tap Here For Custom Highlight!",
        "TextRangePattern.GetText": "Tap Here For Custom Highlight!",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "touchable_highlight_text_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "touchable_highlight_text_button",
    "Offset": "0, 0, 0",
    "Size": "351, 75",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "9, 9, 0",
        "Size": "335, 33",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "335, 33",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Touchable Tests Touchables can contain an Image component 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_highlight_image_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "touchable_highlight_image_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ImageComponentView",
        "_Props": {
          "Sources": [
            {
              "Type": "Remote",
              "Uri": "https://www.facebook.com/favicon.ico",
            },
          ],
        },
      },
    ],
  },
  "Visual Tree": {
    "Comment": "touchable_highlight_image_button",
    "Offset": "0, 0, 0",
    "Size": "75, 75",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "75, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "75, 75",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Touchable Tests Touchables can delay events 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_delay_events_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Press Me",
        "TextRangePattern.GetText": "Press Me",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "touchable_delay_events_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "touchable_delay_events_button",
    "Offset": "0, 0, 0",
    "Size": "84, 27.999939",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "84, 29.000061",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "84, 29.000061",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Touchable Tests Touchables can enable a hit slop region 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_hit_slop_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Press Outside This View",
        "TextRangePattern.GetText": "Press Outside This View",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "touchable_hit_slop_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 0, 0, 255)",
    },
    "Comment": "touchable_hit_slop_button",
    "Offset": "0, 0, 0",
    "Size": "217.99997, 28.000122",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "220.00003, 29.000061",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "220.00003, 29.000061",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Touchable Tests Touchables can register feedback events 1`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_feedback_events_button",
    "ControlType": 50000,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "touchable feedback events",
    "ValuePattern.Value": "Press Me",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Press Me",
        "TextRangePattern.GetText": "Press Me",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "touchable feedback events",
      "TestId": "touchable_feedback_events_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "touchable_feedback_events_button",
    "Offset": "0, 0, 0",
    "Size": "84, 27.999985",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "84, 28.99997",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "84, 28.99997",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Touchable Tests Touchables can register feedback events 2`] = `
{
  "Automation Tree": {
    "AutomationId": "touchable_feedback_events_console",
    "ControlType": 50026,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "press",
        "TextRangePattern.GetText": "press",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "pressIn",
        "TextRangePattern.GetText": "pressIn",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "touchable_feedback_events_console",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "touchable_feedback_events_console",
    "Offset": "0, 0, 0",
    "Size": "843, 180.00005",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "2, 0, 0",
        "Size": "-4, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-2, 0, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-2, 2, 0",
        "Size": "2, -4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-2, -2, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "2, -2, 0",
        "Size": "-4, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "0, -2, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "0, 2, 0",
        "Size": "2, -4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "16, 16, 0",
        "Size": "810, 27.999985",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "810, 27.999985",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "16, 44, 0",
        "Size": "810, 28.99997",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "810, 28.99997",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;
